{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 157,
  "lineage": "793c22c9-5848-efd4-bdb2-f0ca89eabc49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "irl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 65534,
            "arn": "arn:aws:ec2:eu-west-1:721813212263:transit-gateway/tgw-02ac883ff0940c3fc",
            "association_default_route_table_id": "tgw-rtb-0186df71fe4fb0305",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "IRL TGW Test",
            "dns_support": "enable",
            "id": "tgw-02ac883ff0940c3fc",
            "multicast_support": "disable",
            "owner_id": "721813212263",
            "propagation_default_route_table_id": "tgw-rtb-0186df71fe4fb0305",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "IRL TGW Test"
            },
            "tags_all": {
              "Name": "IRL TGW Test",
              "Terraform": "false"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-01ba869a8beb1d8ca",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-00e7dea3df276602e",
              "subnet-082721ee0876db7c3"
            ],
            "tags_all": {
              "Terraform": "false"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-02ac883ff0940c3fc",
            "vpc_id": "vpc-066b6137c073da0bf",
            "vpc_owner_id": "721813212263"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.irl",
            "module.vpc1.aws_subnet.public_subnet_natgw",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-00f4b22f57b2ecc10",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-004811abce532f9e8",
              "subnet-0c8246ab0ef5b0345"
            ],
            "tags_all": {
              "Terraform": "false"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-02ac883ff0940c3fc",
            "vpc_id": "vpc-0029e83ffa224c353",
            "vpc_owner_id": "721813212263"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.irl",
            "module.vpc2.aws_subnet.public_subnet_natgw",
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc1_private_a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a422d70f727fe93e",
            "arn": "arn:aws:ec2:eu-west-1:721813212263:instance/i-080b2fac8b3a1a104",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "irl-test-ec2-node",
            "id": "i-080b2fac8b3a1a104",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c419f673a8d40c1f",
            "private_dns": "ip-10-100-1-10.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Terraform": "false"
                },
                "tags_all": {
                  "Terraform": "false"
                },
                "throughput": 0,
                "volume_id": "vol-085ef2a96f93e288d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0531ae43583e91528",
            "tags": {
              "Name": "irl-vpc1-private-a-1"
            },
            "tags_all": {
              "Name": "irl-vpc1-private-a-1",
              "Terraform": "false"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0261c60794bee49a0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_node",
            "aws_iam_role.ec2_node",
            "aws_security_group.allow_all_vpc1",
            "data.aws_ami.ubuntu_22",
            "module.vpc1.aws_subnet.private_subnet",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc2_private_a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a422d70f727fe93e",
            "arn": "arn:aws:ec2:eu-west-1:721813212263:instance/i-06d073a86bd79f117",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "irl-test-ec2-node",
            "id": "i-06d073a86bd79f117",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-094b8ca8a1754a715",
            "private_dns": "ip-10-200-1-10.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.200.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Terraform": "false"
                },
                "tags_all": {
                  "Terraform": "false"
                },
                "throughput": 0,
                "volume_id": "vol-01bfb9eb0341ea2a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef9848f4a510b91b",
            "tags": {
              "Name": "irl-vpc2-private-a-1"
            },
            "tags_all": {
              "Name": "irl-vpc2-private-a-1",
              "Terraform": "false"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b99bce5f2fd609a2"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_node",
            "aws_iam_role.ec2_node",
            "aws_security_group.allow_all_vpc2",
            "data.aws_ami.ubuntu_22",
            "module.vpc2.aws_subnet.private_subnet",
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0b57a5d6079e1c0bb",
            "network_interface_id": "eni-0648f349881d5759b",
            "private_ip": "10.110.1.11",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02787f7d358437cdd",
            "tags": {
              "Name": "irl-test1-private-NATGW_a"
            },
            "tags_all": {
              "Name": "irl-test1-private-NATGW_a",
              "Terraform": "false"
            }
          },
          "dependencies": [
            "aws_subnet.private_nat",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "aws_vpc1_routes_via_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.200.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-070d579f2c02654484252409353",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b57a5d6079e1c0bb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070d579f2c0265448",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.vpc1",
            "aws_subnet.private_nat",
            "module.vpc1.aws_route_table.vpc_private_route_tables",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "aws_vpc2_routes_via_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.110.0.0/16.rtb-01643b8d096ed2c02",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.110.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01643b8d096ed2c0220590921",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01643b8d096ed2c02",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02ac883ff0940c3fc",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.irl",
            "module.vpc2.aws_route_table.vpc_private_route_tables",
            "module.vpc2.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.110.0.0/16.rtb-0f3ce7824a5751846",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.110.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3ce7824a575184620590921",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3ce7824a5751846",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02ac883ff0940c3fc",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.irl",
            "module.vpc2.aws_route_table.vpc_private_route_tables",
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.200.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a59f989e795a95394252409353",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a59f989e795a9539",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02ac883ff0940c3fc",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.irl",
            "aws_route_table.private_nat",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:route-table/rtb-0a59f989e795a9539",
            "id": "rtb-0a59f989e795a9539",
            "owner_id": "721813212263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.200.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-02ac883ff0940c3fc",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_nat"
            },
            "tags_all": {
              "Name": "private_nat",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cbf9167dd2002dd",
            "route_table_id": "rtb-0a59f989e795a9539",
            "subnet_id": "subnet-02787f7d358437cdd"
          },
          "dependencies": [
            "aws_route_table.private_nat",
            "aws_subnet.private_nat",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:security-group/sg-0261c60794bee49a0",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0261c60794bee49a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16",
                  "10.200.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ALL",
            "name_prefix": "",
            "owner_id": "721813212263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_all"
            },
            "tags_all": {
              "Name": "Allow_all",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:security-group/sg-0b99bce5f2fd609a2",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b99bce5f2fd609a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.200.0.0/16",
                  "10.100.0.0/16",
                  "10.110.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ALL",
            "name_prefix": "",
            "owner_id": "721813212263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_all"
            },
            "tags_all": {
              "Name": "Allow_all",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:subnet/subnet-02787f7d358437cdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.110.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02787f7d358437cdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721813212263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_nat"
            },
            "tags_all": {
              "Name": "private_nat",
              "Terraform": "false"
            },
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "vpc_route_table_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:route-table/rtb-012131b9595bb04cb",
            "default_route_table_id": "rtb-012131b9595bb04cb",
            "id": "rtb-012131b9595bb04cb",
            "owner_id": "721813212263",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "irl-test1-default-table"
            },
            "tags_all": {
              "Name": "irl-test1-default-table",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0768efdff0a87f4e3",
            "arn": "arn:aws:ec2:eu-west-1:721813212263:elastic-ip/eipalloc-0768efdff0a87f4e3",
            "association_id": "eipassoc-07cdb52f2aac0111a",
            "domain": "vpc",
            "id": "eipalloc-0768efdff0a87f4e3",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-019e4a24b61697ece",
            "private_dns": "ip-10-100-0-76.eu-west-1.compute.internal",
            "private_ip": "10.100.0.76",
            "public_dns": "ec2-52-49-54-157.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.54.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "irl-test1 EIP for AZ-a"
            },
            "tags_all": {
              "Name": "irl-test1 EIP for AZ-a",
              "Terraform": "false"
            },
            "vpc": true
          }
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee7b1eaf2e384f22",
            "arn": "arn:aws:ec2:eu-west-1:721813212263:elastic-ip/eipalloc-0ee7b1eaf2e384f22",
            "association_id": "eipassoc-0be67ae560be5faaf",
            "domain": "vpc",
            "id": "eipalloc-0ee7b1eaf2e384f22",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0f99af499fa3dd42c",
            "private_dns": "ip-10-100-0-240.eu-west-1.compute.internal",
            "private_ip": "10.100.0.240",
            "public_dns": "ec2-54-78-158-61.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.158.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "irl-test1 EIP for AZ-b"
            },
            "tags_all": {
              "Name": "irl-test1 EIP for AZ-b",
              "Terraform": "false"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:internet-gateway/igw-071614df515b073c4",
            "id": "igw-071614df515b073c4",
            "owner_id": "721813212263",
            "tags": {
              "Name": "irl-test1 IGW"
            },
            "tags_all": {
              "Name": "irl-test1 IGW",
              "Terraform": "false"
            },
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "random_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0768efdff0a87f4e3",
            "association_id": "eipassoc-07cdb52f2aac0111a",
            "connectivity_type": "public",
            "id": "nat-00bce626c35f74584",
            "network_interface_id": "eni-019e4a24b61697ece",
            "private_ip": "10.100.0.76",
            "public_ip": "52.49.54.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00e7dea3df276602e",
            "tags": {
              "Name": "irl-test1-NAT_GW-public_NATGW_a"
            },
            "tags_all": {
              "Name": "irl-test1-NAT_GW-public_NATGW_a",
              "Terraform": "false"
            }
          },
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip",
            "module.vpc1.aws_subnet.public_subnet_natgw",
            "module.vpc1.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee7b1eaf2e384f22",
            "association_id": "eipassoc-0be67ae560be5faaf",
            "connectivity_type": "public",
            "id": "nat-09c2ac10c9656778e",
            "network_interface_id": "eni-0f99af499fa3dd42c",
            "private_ip": "10.100.0.240",
            "public_ip": "54.78.158.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-082721ee0876db7c3",
            "tags": {
              "Name": "irl-test1-NAT_GW-public_NATGW_b"
            },
            "tags_all": {
              "Name": "irl-test1-NAT_GW-public_NATGW_b",
              "Terraform": "false"
            }
          },
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip",
            "module.vpc1.aws_subnet.public_subnet_natgw",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default_route_random_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-070d579f2c02654481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00bce626c35f74584",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070d579f2c0265448",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip",
            "module.vpc1.aws_nat_gateway.random_eips",
            "module.vpc1.aws_route_table.vpc_private_route_tables",
            "module.vpc1.aws_subnet.public_subnet_natgw",
            "module.vpc1.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04bca48df5245b3da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09c2ac10c9656778e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04bca48df5245b3da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip",
            "module.vpc1.aws_nat_gateway.random_eips",
            "module.vpc1.aws_route_table.vpc_private_route_tables",
            "module.vpc1.aws_subnet.public_subnet_natgw",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-071614df515b073c4",
            "id": "r-rtb-093933ae6fe5a0f6a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093933ae6fe5a0f6a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.vpc_igw",
            "module.vpc1.aws_route_table.vpc_public_route_table",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:route-table/rtb-070d579f2c0265448",
            "id": "rtb-070d579f2c0265448",
            "owner_id": "721813212263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00bce626c35f74584",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.200.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b57a5d6079e1c0bb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "irl-test1-private-route-a"
            },
            "tags_all": {
              "Name": "irl-test1-private-route-a",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:route-table/rtb-04bca48df5245b3da",
            "id": "rtb-04bca48df5245b3da",
            "owner_id": "721813212263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09c2ac10c9656778e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "irl-test1-private-route-b"
            },
            "tags_all": {
              "Name": "irl-test1-private-route-b",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:route-table/rtb-093933ae6fe5a0f6a",
            "id": "rtb-093933ae6fe5a0f6a",
            "owner_id": "721813212263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071614df515b073c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "irl-test1-route-table-public"
            },
            "tags_all": {
              "Name": "irl-test1-route-table-public",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081d16999ca790e80",
            "route_table_id": "rtb-070d579f2c0265448",
            "subnet_id": "subnet-0531ae43583e91528"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.vpc_private_route_tables",
            "module.vpc1.aws_subnet.private_subnet",
            "module.vpc1.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c591ad5b5b90ef27",
            "route_table_id": "rtb-04bca48df5245b3da",
            "subnet_id": "subnet-07971b78fc40c85c0"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.vpc_private_route_tables",
            "module.vpc1.aws_subnet.private_subnet",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_natgw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0471204d71a0983be",
            "route_table_id": "rtb-093933ae6fe5a0f6a",
            "subnet_id": "subnet-00e7dea3df276602e"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.vpc_public_route_table",
            "module.vpc1.aws_subnet.public_subnet_natgw",
            "module.vpc1.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4cf050bd80eee2d",
            "route_table_id": "rtb-093933ae6fe5a0f6a",
            "subnet_id": "subnet-082721ee0876db7c3"
          },
          "dependencies": [
            "module.vpc1.aws_route_table.vpc_public_route_table",
            "module.vpc1.aws_subnet.public_subnet_natgw",
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:subnet/subnet-0531ae43583e91528",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0531ae43583e91528",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721813212263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_a"
            },
            "tags_all": {
              "Name": "private_a",
              "Terraform": "false"
            },
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:subnet/subnet-07971b78fc40c85c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07971b78fc40c85c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721813212263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_b"
            },
            "tags_all": {
              "Name": "private_b",
              "Terraform": "false"
            },
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:subnet/subnet-00e7dea3df276602e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.100.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e7dea3df276602e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721813212263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_NATGW_a"
            },
            "tags_all": {
              "Name": "public_NATGW_a",
              "Terraform": "false"
            },
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:subnet/subnet-082721ee0876db7c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.100.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082721ee0876db7c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721813212263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_NATGW_b"
            },
            "tags_all": {
              "Name": "public_NATGW_b",
              "Terraform": "false"
            },
            "vpc_id": "vpc-066b6137c073da0bf"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:vpc/vpc-066b6137c073da0bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-06d16124099daa692",
            "default_route_table_id": "rtb-012131b9595bb04cb",
            "default_security_group_id": "sg-0d5fe63aac44be806",
            "dhcp_options_id": "dopt-0b395ebbabfe97a20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066b6137c073da0bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012131b9595bb04cb",
            "owner_id": "721813212263",
            "tags": {
              "Name": "irl-test1 VPC"
            },
            "tags_all": {
              "Name": "irl-test1 VPC",
              "Terraform": "false"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "vpc_route_table_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:route-table/rtb-0d1c10aa1ac44b0ea",
            "default_route_table_id": "rtb-0d1c10aa1ac44b0ea",
            "id": "rtb-0d1c10aa1ac44b0ea",
            "owner_id": "721813212263",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "irl-test2-default-table"
            },
            "tags_all": {
              "Name": "irl-test2-default-table",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076ff1273cddd907d",
            "arn": "arn:aws:ec2:eu-west-1:721813212263:elastic-ip/eipalloc-076ff1273cddd907d",
            "association_id": "eipassoc-03ac2c2b1b23cfb4a",
            "domain": "vpc",
            "id": "eipalloc-076ff1273cddd907d",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0b0d857197f29e2d1",
            "private_dns": "ip-10-200-0-12.eu-west-1.compute.internal",
            "private_ip": "10.200.0.12",
            "public_dns": "ec2-34-241-5-146.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.5.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "irl-test2 EIP for AZ-a"
            },
            "tags_all": {
              "Name": "irl-test2 EIP for AZ-a",
              "Terraform": "false"
            },
            "vpc": true
          }
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7f0434a1507d433",
            "arn": "arn:aws:ec2:eu-west-1:721813212263:elastic-ip/eipalloc-0d7f0434a1507d433",
            "association_id": "eipassoc-060678bda69bac061",
            "domain": "vpc",
            "id": "eipalloc-0d7f0434a1507d433",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-091362951feb9ad5b",
            "private_dns": "ip-10-200-0-141.eu-west-1.compute.internal",
            "private_ip": "10.200.0.141",
            "public_dns": "ec2-54-216-189-204.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.189.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "irl-test2 EIP for AZ-b"
            },
            "tags_all": {
              "Name": "irl-test2 EIP for AZ-b",
              "Terraform": "false"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:internet-gateway/igw-037008102cdd9397c",
            "id": "igw-037008102cdd9397c",
            "owner_id": "721813212263",
            "tags": {
              "Name": "irl-test2 IGW"
            },
            "tags_all": {
              "Name": "irl-test2 IGW",
              "Terraform": "false"
            },
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "random_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076ff1273cddd907d",
            "association_id": "eipassoc-03ac2c2b1b23cfb4a",
            "connectivity_type": "public",
            "id": "nat-02731d5e168c9eb42",
            "network_interface_id": "eni-0b0d857197f29e2d1",
            "private_ip": "10.200.0.12",
            "public_ip": "34.241.5.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-004811abce532f9e8",
            "tags": {
              "Name": "irl-test2-NAT_GW-public_NATGW_a"
            },
            "tags_all": {
              "Name": "irl-test2-NAT_GW-public_NATGW_a",
              "Terraform": "false"
            }
          },
          "dependencies": [
            "module.vpc2.aws_eip.nat_eip",
            "module.vpc2.aws_subnet.public_subnet_natgw",
            "module.vpc2.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7f0434a1507d433",
            "association_id": "eipassoc-060678bda69bac061",
            "connectivity_type": "public",
            "id": "nat-09ba2b4f8b3c6a76d",
            "network_interface_id": "eni-091362951feb9ad5b",
            "private_ip": "10.200.0.141",
            "public_ip": "54.216.189.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8246ab0ef5b0345",
            "tags": {
              "Name": "irl-test2-NAT_GW-public_NATGW_b"
            },
            "tags_all": {
              "Name": "irl-test2-NAT_GW-public_NATGW_b",
              "Terraform": "false"
            }
          },
          "dependencies": [
            "module.vpc2.aws_eip.nat_eip",
            "module.vpc2.aws_subnet.public_subnet_natgw",
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default_route_random_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01643b8d096ed2c021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02731d5e168c9eb42",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01643b8d096ed2c02",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_eip.nat_eip",
            "module.vpc2.aws_nat_gateway.random_eips",
            "module.vpc2.aws_route_table.vpc_private_route_tables",
            "module.vpc2.aws_subnet.public_subnet_natgw",
            "module.vpc2.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3ce7824a57518461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09ba2b4f8b3c6a76d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3ce7824a5751846",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_eip.nat_eip",
            "module.vpc2.aws_nat_gateway.random_eips",
            "module.vpc2.aws_route_table.vpc_private_route_tables",
            "module.vpc2.aws_subnet.public_subnet_natgw",
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-037008102cdd9397c",
            "id": "r-rtb-05b495fe5675832c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b495fe5675832c1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_internet_gateway.vpc_igw",
            "module.vpc2.aws_route_table.vpc_public_route_table",
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:route-table/rtb-01643b8d096ed2c02",
            "id": "rtb-01643b8d096ed2c02",
            "owner_id": "721813212263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02731d5e168c9eb42",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.110.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-02ac883ff0940c3fc",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "irl-test2-private-route-a"
            },
            "tags_all": {
              "Name": "irl-test2-private-route-a",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:route-table/rtb-0f3ce7824a5751846",
            "id": "rtb-0f3ce7824a5751846",
            "owner_id": "721813212263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ba2b4f8b3c6a76d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.110.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-02ac883ff0940c3fc",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "irl-test2-private-route-b"
            },
            "tags_all": {
              "Name": "irl-test2-private-route-b",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:route-table/rtb-05b495fe5675832c1",
            "id": "rtb-05b495fe5675832c1",
            "owner_id": "721813212263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037008102cdd9397c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "irl-test2-route-table-public"
            },
            "tags_all": {
              "Name": "irl-test2-route-table-public",
              "Terraform": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f1608d5a2158d11",
            "route_table_id": "rtb-01643b8d096ed2c02",
            "subnet_id": "subnet-0ef9848f4a510b91b"
          },
          "dependencies": [
            "module.vpc2.aws_route_table.vpc_private_route_tables",
            "module.vpc2.aws_subnet.private_subnet",
            "module.vpc2.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbac61e01e2aea98",
            "route_table_id": "rtb-0f3ce7824a5751846",
            "subnet_id": "subnet-05207fc7c54681e07"
          },
          "dependencies": [
            "module.vpc2.aws_route_table.vpc_private_route_tables",
            "module.vpc2.aws_subnet.private_subnet",
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_natgw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d4b9bf6917e7c17",
            "route_table_id": "rtb-05b495fe5675832c1",
            "subnet_id": "subnet-004811abce532f9e8"
          },
          "dependencies": [
            "module.vpc2.aws_route_table.vpc_public_route_table",
            "module.vpc2.aws_subnet.public_subnet_natgw",
            "module.vpc2.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05038d0459edbcfc9",
            "route_table_id": "rtb-05b495fe5675832c1",
            "subnet_id": "subnet-0c8246ab0ef5b0345"
          },
          "dependencies": [
            "module.vpc2.aws_route_table.vpc_public_route_table",
            "module.vpc2.aws_subnet.public_subnet_natgw",
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:subnet/subnet-0ef9848f4a510b91b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef9848f4a510b91b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721813212263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_a"
            },
            "tags_all": {
              "Name": "private_a",
              "Terraform": "false"
            },
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:subnet/subnet-05207fc7c54681e07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05207fc7c54681e07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721813212263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_b"
            },
            "tags_all": {
              "Name": "private_b",
              "Terraform": "false"
            },
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_NATGW_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:subnet/subnet-004811abce532f9e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.200.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004811abce532f9e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721813212263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_NATGW_a"
            },
            "tags_all": {
              "Name": "public_NATGW_a",
              "Terraform": "false"
            },
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_NATGW_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:subnet/subnet-0c8246ab0ef5b0345",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.200.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8246ab0ef5b0345",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721813212263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_NATGW_b"
            },
            "tags_all": {
              "Name": "public_NATGW_b",
              "Terraform": "false"
            },
            "vpc_id": "vpc-0029e83ffa224c353"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721813212263:vpc/vpc-0029e83ffa224c353",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-02e2d1d83d57c285b",
            "default_route_table_id": "rtb-0d1c10aa1ac44b0ea",
            "default_security_group_id": "sg-0c2caf2682cb93164",
            "dhcp_options_id": "dopt-01e793745479d4e8f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0029e83ffa224c353",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1c10aa1ac44b0ea",
            "owner_id": "721813212263",
            "tags": {
              "Name": "irl-test2 VPC"
            },
            "tags_all": {
              "Name": "irl-test2 VPC",
              "Terraform": "false"
            }
          }
        }
      ]
    }
  ]
}